AC_INIT(mod_guile, [0.0.1], [steve.erhart@gmail.com])

AC_CONFIG_SRCDIR([configure.ac])
AC_CONFIG_MACRO_DIRS([m4])

AM_INIT_AUTOMAKE([-Wall -Werror foreign subdir-objects])

GUILE_PROGS
AM_PROG_AR
AC_PROG_CC

LT_INIT

# apache stuff
AC_ARG_WITH(apxs,
  [AC_HELP_STRING([--with-apxs=PATH], [apxs path [default=yes]])],
  [APXS_PATH="$withval"],
  [APXS_PATH="/usr/bin:/usr/sbin:/usr/local/bin:/usr/local/sbin"]
)

AC_PATH_PROG(APXS, apxs, no, ${APXS_PATH})

AS_IF([test "x${APXS}" = "xno"], AC_MSG_ERROR([apxs not found]),
  [test "x${APXS}" = "x"], AC_MSG_ERROR([apxs not found])
)

APXS_CFLAGS=`${APXS} -q CFLAGS 2> /dev/null`
APXS_LDFLAGS=`${APXS} -q LDFLAGS 2> /dev/null`
APXS_LIBS=`${APXS} -q LIBS 2> /dev/null`
APXS_LIBEXECDIR=`${APXS} -q LIBEXECDIR 2> /dev/null`
APXS_EXTRA_INCLUDES=`${APXS} -q EXTRA_INCLUDES 2> /dev/null`
APXS_INCLUDES="${APXS_EXTRA_INCLUDES}"

APACHE_MODULEDIR="${APXS_LIBEXECDIR}"
APACHE_INCLUDES="${APXS_INCLUDES}"
APACHE_CFLAGS="${APXS_CFLAGS}"
APACHE_LDFLAGS="${APXS_LDFLAGS}"
APACHE_LIBS="${APXS_LIBS}"

AC_MSG_RESULT([== APACHE ==])
AC_MSG_RESULT([APACHE_INCLUDES: ${APACHE_INCLUDES}])
AC_MSG_RESULT([APACHE_MODULEDIR: ${APACHE_MODULEDIR}])
AC_MSG_RESULT([APACHE_CFLAGS: ${APACHE_CFLAGS}])
AC_MSG_RESULT([APACHE_LDFLAGS: ${APACHE_LDFLAGS}])

AC_SUBST(APACHE_MODULEDIR)
AC_SUBST(APACHE_INCLUDES)
AC_SUBST(APACHE_CFLAGS)
AC_SUBST(APACHE_CPPFLAGS)
AC_SUBST(APACHE_LDFLAGS)
AC_SUBST(APACHE_LIBS)

GUILE_CFLAGS=`${GUILE_CONFIG} compile`
GUILE_LDFLAGS=`${GUILE_CONFIG} link`
GUILE_COMPILE="${GUILE_TOOLS} compile"

AC_SUBST(GUILE_CFLAGS)
AC_SUBST(GUILE_LDFLAGS)
AC_SUBST(GUILE_COMPILE)

AC_CONFIG_FILES([env], [chmod +x env])
AC_CONFIG_FILES([Makefile src/Makefile])

AC_OUTPUT
